Mon Feb 11 10:45:27 CET 2002 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-71.xml
	  tests/general/Makefile.am tests/general/bug-71.*: added a 
	  specific example for Norm's bug in the regression tests

Sun Feb 10 22:08:51 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/attributes.c: fixed a bug reported by Norm

Sun Feb 10 20:25:28 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/libxml.c : fixed a small warning.
	* doc/libxslt-api.xml doc/libxslt-decl.txt doc/libxslt-refs.xml
	  python/libxsltclass.txt: rebuilt the APIs

Sun Feb 10 20:16:15 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/imports.c libxslt/numbers.c libxslt/pattern.c
	  libxslt/pattern.h libxslt/transform.c libxslt/xslt.c
	  libxslt/xsltInternals.h: adding extra run-time informations
	  to make the stylesheet really read-only at run-time.

Sun Feb 10 16:21:09 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixing bug #70281

Sun Feb 10 15:10:56 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c: trying to fix #68759

Sat Feb  9 23:17:53 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/Makefile.am: seems some version of automake didn't
	  generate the dependancies right as Jacob found out. Add
	  an extra dependancy rule.

Sat Feb  9 19:04:01 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in libxslt.spec.in python/Makefile.am python/generator.py
	  python/libxsl.py python/libxslt.c python/tests/Makefile.am:
	  Fixed the python Makefiles, corrected a bug showing up on ia64,
	  changed the name of the python internal module too

Fri Feb  8 17:01:10 CET 2002 Daniel Veillard <daniel@veillard.com>

	* Copyright Makefile.am configure.in libxslt.spec.in: change the
	  Licence to MIT Licence and release of 1.0.11
	* doc/FAQ.html doc/intro.html doc/libxslt-decl.txt doc/news.html 
	  doc/xslt.html: updates of the docs accordingly
	* libxslt/xsltwin32config.h: numbering